OpenLGTV BCM: more fixes for 0.3.0-rc2 - increase browser frame size a bit, fix back and exit buttons, sample keypress.html file for detecting key codes of keyboard or remote
git-svn-id: http://svn.openlgtv.org.ru@346 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/styles.css
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/styles.css
@@ -1,6 +1,9 @@
 body{
 	font-family:"TiresiasScreenfont";
 	background-color:black;
+	overflow:hidden;
+	overflow-y:hidden;
+	overflow-x:hidden;
 }
 
 .container{
