OpenLGTV BCM: warning - break: network shares mount rewrite to make support for multiple shares, not finished yet
git-svn-id: http://svn.openlgtv.org.ru@772 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/styles.css
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/styles.css
@@ -56,3 +56,40 @@ body{
 	input.menubutton {
 	height:25px;
 }
+.mountsrc{
+	width:300px;
+	max-width:300px;
+	overflow:hidden;
+	white-space:nowrap;
+}
+.mountdst{
+	width:190px;
+	max-width:190px;
+	overflow:hidden;
+	white-space:nowrap;
+}
+.mountfstype{
+	width:50px;
+	max-width:50px;
+	overflow:hidden;
+	text-align:center;
+}
+.mountuname{
+	width:100px;
+	max-width:100px;
+	overflow:hidden;
+	text-align:center;
+	white-space:nowrap;
+}
+.mountauto{
+	width:80px;
+	max-width:80px;
+	overflow:hidden;
+	text-align:center;
+}
+.mountedit{
+	width:80px;
+	max-width:80px;
+	overflow:hidden;
+	text-align:center;
+}
