OpenLGTV BCM: final WebUI improvements - complete arrows navigation, fix for dissappearing buttons, FileManager copy dialog in progress
git-svn-id: http://svn.openlgtv.org.ru@789 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/keyboard.css
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/keyboard.css
@@ -6,4 +6,9 @@
 }
 .Keyboard a:hover, a:focus{
 	background: transparent url(../Images/Keyboard/bt_focus.png) -50px -50px no-repeat;
+	text-decoration:none;
+	color:white
+	border:0px;
+	height:31px;
+	width:31px;
 }
