OpenLGTV BCM: add EtherWake WebUI submenu, some cleanup of old comments, need to test both EtherWake and Network Shares edit via WebUI
git-svn-id: http://svn.openlgtv.org.ru@873 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/styles.css
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/styles.css
@@ -93,14 +93,14 @@ a.menubutton:hover {
 	color:red;
 }
 
-.mountsrc{
+.mountsrc, .ew_name{
 	width:300px;
 	max-width:300px;
 	overflow:hidden;
 	white-space:nowrap;
 }
 
-.mountdst{
+.mountdst, .ew_ip, .ew_mac{
 	width:190px;
 	max-width:190px;
 	overflow:hidden;
@@ -114,7 +114,7 @@ a.menubutton:hover {
 	text-align:center;
 }
 
-.mountuname{
+.mountuname, .ew_pass, .ew_opt, .ew_autowake{
 	width:100px;
 	max-width:100px;
 	overflow:hidden;
@@ -122,14 +122,7 @@ a.menubutton:hover {
 	white-space:nowrap;
 }
 
-.mountauto{
-	width:80px;
-	max-width:80px;
-	overflow:hidden;
-	text-align:center;
-}
-
-.mountedit{
+.mountauto, .mountedit, .ew_edit{
 	width:80px;
 	max-width:80px;
 	overflow:hidden;
