OpenLGTV BCM: FileManager: improved text files viewer and fixes to WebUI 'run' commmand
git-svn-id: http://svn.openlgtv.org.ru@1020 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/styles.css
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/css/styles.css
@@ -131,7 +131,7 @@ a.menubutton:hover {
 
 .run{
 	overflow: auto;
-	height: 430px;
+	height: 400; /* height: 430px; */
 	width: 99%;
 	white-space: pre-wrap;                 /* CSS3 browsers  */
 	white-space: -moz-pre-wrap !important; /* 1999+ Mozilla  */
