OpenLGTV BCM: fix scalling and centering Remote Control on Android and iOS devices
git-svn-id: http://svn.openlgtv.org.ru@1178 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/remote.css
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/remote.css
@@ -9,7 +9,8 @@ Sep, 2012.
 	margin: 0 auto;
 	width: 220px;
 	background-color: #151515;
-	padding: 20px 5px;
+	/* padding: 20px 5px; */
+	padding: 5px 5px;
 	/* round corners */
 	border-radius: 10px; /* Opera, Chrome */
 	-moz-border-radius: 10px; /* FF */
