OpenLGTV BCM: add more links - need to update icons
git-svn-id: http://svn.openlgtv.org.ru@1179 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/remote.css
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/remote/remote.css
@@ -4,6 +4,11 @@ http://www.redips.net/
 Sep, 2012.
 */
 
+#body {
+	margin: 0 auto;
+	width: 240px;
+}
+
 /* main container */
 #main {
 	margin: 0 auto;
